# SRTP_PE_Benchmark

outputs/power_electronics_evaluation_framework/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
outputs/power_electronics_evaluation_framework/.github/ISSUE_TEMPLATE/: benchmark_request.md  claim_review.md
outputs/power_electronics_evaluation_framework/.github/workflows/: ci.yml
outputs/power_electronics_evaluation_framework/agents/: README.md  example_agent.py
outputs/power_electronics_evaluation_framework/benchmarks/: README.md  __init__.py
outputs/power_electronics_evaluation_framework/benchmarks/power_flow_benchmark/: README.md  __init__.py  evaluator.py
outputs/power_electronics_evaluation_framework/benchmarks/power_flow_benchmark/sample_outputs/: example_agent_output.json
outputs/power_electronics_evaluation_framework/benchmarks/power_flow_benchmark/tasks/: example_radial_bus.json
outputs/power_electronics_evaluation_framework/docs/: README.md  SCHEMA.md  catalog.md  citations.md  evaluation_guidelines.md  reference_research.md
outputs/power_electronics_evaluation_framework/research_notes/cs/agent_architectures/: hybrid_rag_simulation_agent.md  multi_agent_evidence_gates.md
outputs/power_electronics_evaluation_framework/results/: README.md
outputs/power_electronics_evaluation_framework/src/evaluation_harness/: __init__.py  cli.py  io.py  models.py  scoring.py
outputs/power_electronics_evaluation_framework/src/utils/: __init__.py
outputs/power_electronics_evaluation_framework/tests/: test_power_flow_benchmark.py
(+6 files in other folders)
