[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "power-electronics-evaluation-framework"
version = "0.1.0"
description = "Executable evaluation framework for AI agents in power electronics design."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Darren Rennard Halim" }
]
dependencies = []

[project.scripts]
pe-eval = "evaluation_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

